--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
       <label for="chapter-select">Choose Chapter or All:</label><br>
       <select id="chapter-select">
         <option value="all">All Chapters</option>
-        <!-- Create options for chapters 1–12 -->
         <option value="1">Chapter 1</option>
         <option value="2">Chapter 2</option>
         <option value="3">Chapter 3</option>
@@ -182,13 +181,7 @@
     <div class="form-group">
       <label for="question-count-select">Number of Questions:</label><br>
       <select id="question-count-select">
-        <option value="15">15</option>
-        <option value="30">30</option>
-        <option value="45">45</option>
-        <option value="60">60</option>
-        <option value="75">75</option>
-        <option value="90">90</option>
-        <option value="100">100</option>
+        <!-- Will be dynamically updated via JS -->
       </select>
     </div>
 
@@ -259,12 +252,67 @@ let chosenFormat          = 'allAtOnce';
 let userAnswers           = []; // Track user answers if needed for grading
 
 /********************************************************************
+ * CHAPTER QUESTION LIMITS / OPTIONS
+ ********************************************************************/
+/**
+ * For each chapter, define the 'menu' of question-count options.
+ * For example:
+ *  - Chapter 1 => [10, 20, 35, 50, 60]
+ *  - Chapter 6 => [6, 14, 20, 28]
+ *  - "all" => [15, 30, 45, 60, 75, 90, 100]
+ */
+const CHAPTER_QUESTION_OPTIONS = {
+  all:    [15, 30, 45, 60, 75, 90, 100],
+  1:      [10, 20, 35, 50, 60],
+  2:      [10, 20, 35, 50, 60],
+  3:      [10, 20, 35, 50, 60],
+  4:      [10, 20, 35, 50, 60],
+  5:      [10, 20, 35, 50, 60],
+  6:      [6, 14, 20, 28],
+  7:      [6, 14, 20, 28],
+  8:      [10, 20, 35, 50, 60],
+  9:      [10, 20, 35, 50, 60],
+  10:     [10, 20, 35, 45],
+  11:     [6, 12, 18, 24],
+  12:     [6, 12, 18, 24],
+};
+
+/********************************************************************
  * EVENT LISTENERS
  ********************************************************************/
 startQuizBtn.addEventListener('click', startQuiz);
 nextQuestionBtn.addEventListener('click', handleNextQuestion);
 submitBtn.addEventListener('click', handleSubmitQuiz);
 restartBtn.addEventListener('click', resetQuiz);
+
+// When user changes chapter, dynamically update questionCountSelect
+chapterSelect.addEventListener('change', updateQuestionCountOptions);
+
+// Initialize question counts for the default selection (which is "all")
+window.addEventListener('DOMContentLoaded', () => {
+  updateQuestionCountOptions();
+});
+
+/********************************************************************
+ * DYNAMIC QUESTION COUNT DROPDOWN
+ ********************************************************************/
+function updateQuestionCountOptions() {
+  const selectedChapter = chapterSelect.value; // e.g. "all", "1", "2", ...
+  const questionOptions = CHAPTER_QUESTION_OPTIONS[selectedChapter] || [15,30,45,60,75,90,100];
+
+  // Clear existing <option>
+  questionCountSelect.innerHTML = '';
+
+  // Populate new options
+  questionOptions.forEach(num => {
+    const opt = document.createElement('option');
+    opt.value = num;
+    opt.textContent = num;
+    questionCountSelect.appendChild(opt);
+  });
+  // Optionally select the first by default
+  questionCountSelect.selectedIndex = 0;
+}
 
 /********************************************************************
  * MAIN QUIZ LOGIC
@@ -322,7 +370,6 @@ async function startQuiz() {
  */
 async function fetchAllChapters() {
   let merged = [];
-  // For demo, we assume 12 chapters
   for (let i = 1; i <= 12; i++) {
     const data = await fetchSingleChapter(i);
     merged = merged.concat(data);
@@ -391,7 +438,7 @@ function renderSingleQuestion(index) {
     // Event listener to store user’s choice
     radio.addEventListener('change', () => {
       userAnswers[index] = optIndex;
-      // Immediate feedback if desired
+      // Instant feedback
       if (optIndex === questionData.correctOption) {
         showInstantFeedback(optionsDiv, true);
       } else {
@@ -449,7 +496,7 @@ function renderAllQuestions() {
 }
 
 /**
- * Show instant feedback for "oneAtATime" format
+ * Show instant feedback (oneAtATime mode)
  */
 function showInstantFeedback(container, isCorrect) {
   // Remove old feedback
