--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@
         <h3>High Scores</h3>
         <ul id="high-score-list"></ul>
       </div>
+      <!-- “Restart” button (always there for either mode) -->
       <button class="btn btn-secondary" id="restart-btn">Restart</button>
     </div>
 
@@ -626,6 +627,9 @@
     let userAnswers      = [];  // For "allAtOnce"
     let chosenFormat     = 'allAtOnce';
     let totalQuestions   = 0;
+
+    // Track questions answered incorrectly at least once in One-at-a-Time mode
+    let wrongAnsweredSet = new Set();
 
     // Timer variables
     let timerInterval    = null;
@@ -705,6 +709,9 @@
       quizSection.style.display = 'block';
       resultSection.style.display = 'none';
 
+      // Reset any leftover "wrong" tracking
+      wrongAnsweredSet.clear();
+
       chosenFormat = getSelectedFormat();
 
       // Possibly fetch the relevant JSON
@@ -724,7 +731,6 @@
       allFetched = removeDuplicateQuestions(allFetched);
 
       // "Advanced" random mixing for extra randomness
-      // (multiple shuffles + possible reversal passes)
       advancedRandomMix(allFetched);
 
       // Slice to user's chosen question count
@@ -777,6 +783,7 @@
     }
 
     async function fetchSingleChapter(chapterNumber) {
+      // Adjust the path if needed, or replace with actual fetching logic
       const url = `./data/chapter${chapterNumber}.json`;
       try {
         const response = await fetch(url);
@@ -904,6 +911,8 @@
             blockDiv.classList.add('correct');
           } else {
             blockDiv.classList.add('wrong');
+            // Mark this question as "wrong at least once"
+            wrongAnsweredSet.add(qData);
           }
 
           // Show explanation + feedback
@@ -937,8 +946,99 @@
       quizSection.style.display = 'none';
       resultSection.style.display = 'block';
       stopTimer();
+
       scoreDisplay.textContent = `You eventually got them all correct! Time taken: ${formatTime(timeElapsed)}.`;
+
+      // Display high scores as before
       displayHighScores(totalQuestions, totalQuestions, chapterSelect.value);
+
+      // Now add the 3 requested buttons (Finish, Review Wrong, Review All) ONLY for oneAtATime
+      // so we don’t conflict with the “allAtOnce” mode’s interface.
+      if (chosenFormat === 'oneAtATime') {
+        // Create container for these new buttons so we don’t keep appending multiple times:
+        const btnContainer = document.createElement('div');
+
+        const finishBtn = document.createElement('button');
+        finishBtn.classList.add('btn');
+        finishBtn.textContent = 'Finish';
+        finishBtn.addEventListener('click', () => {
+          resetQuiz();
+        });
+        btnContainer.appendChild(finishBtn);
+
+        const reviewWrongBtn = document.createElement('button');
+        reviewWrongBtn.classList.add('btn');
+        reviewWrongBtn.textContent = 'Review Wrong Questions';
+        reviewWrongBtn.addEventListener('click', () => {
+          // Hide results, show review
+          resultSection.style.display = 'none';
+          reviewQuestions(Array.from(wrongAnsweredSet)); // convert set to array
+        });
+        btnContainer.appendChild(reviewWrongBtn);
+
+        const reviewAllBtn = document.createElement('button');
+        reviewAllBtn.classList.add('btn');
+        reviewAllBtn.textContent = 'Review All Questions';
+        reviewAllBtn.addEventListener('click', () => {
+          // Hide results, show review
+          resultSection.style.display = 'none';
+          reviewQuestions(currentQuestions);
+        });
+        btnContainer.appendChild(reviewAllBtn);
+
+        resultSection.appendChild(btnContainer);
+      }
+    }
+
+    /********************************************************************
+     * REVIEW FUNCTION (Highlights correct answer + shows explanation)
+     ********************************************************************/
+    function reviewQuestions(questionsToReview) {
+      // Show the quiz section again for “review” but we’ll re-use the quizContainer
+      quizSection.style.display = 'block';
+      quizContainer.innerHTML = '';
+      
+      // We’re not re-testing; just showing Qs with correct answer highlighted
+      questionsToReview.forEach((qData, index) => {
+        // Sort the options so correct answer always shows consistently
+        // (But you can keep them random if you prefer.)
+        const sortedOptions = [...qData.options];
+        // If you like, you can skip sorting:
+        // Or forcibly place the correct answer last, etc.
+
+        const questionDiv = document.createElement('div');
+        questionDiv.classList.add('question-container');
+
+        const header = document.createElement('h3');
+        header.textContent = `Q: ${qData.questionText}`;
+        questionDiv.appendChild(header);
+
+        const gridDiv = document.createElement('div');
+        gridDiv.classList.add('options-grid');
+
+        sortedOptions.forEach(optText => {
+          const blockDiv = document.createElement('div');
+          blockDiv.classList.add('option-block');
+          blockDiv.textContent = optText;
+
+          if (optText === qData.correctAnswer) {
+            blockDiv.classList.add('correct');
+          }
+          gridDiv.appendChild(blockDiv);
+        });
+
+        questionDiv.appendChild(gridDiv);
+
+        // Explanation
+        if (qData.explanation) {
+          const explEl = document.createElement('div');
+          explEl.classList.add('explanation');
+          explEl.textContent = qData.explanation;
+          questionDiv.appendChild(explEl);
+        }
+
+        quizContainer.appendChild(questionDiv);
+      });
     }
 
     /********************************************************************
@@ -1001,6 +1101,7 @@
       currentQuestions = [];
       questionQueue = [];
       userAnswers = [];
+      wrongAnsweredSet.clear();
 
       updateProgressBar(0);
 
